--- a/tooltip.css
+++ b/tooltip.css
@@ -1,20 +1,17 @@
-/* https: //www.w3schools.com/css/css_tooltip.asp */
+/* Adapted from: https://www.w3schools.com/css/css_tooltip.asp */
 
 /* Tooltip container */
-.tooltip {
+.issue-type {
     position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black;
-    /* If you want dots under the hoverable text */
 }
 
 /* Tooltip text */
-.tooltip .tooltiptext {
+.issue-type .tooltiptext {
     visibility: hidden;
-    width: 120px;
-    bottom: 100%;
+    width: 240px;
+    top: 100%;
     left: 50%;
-    margin-left: -60px;
+    margin-left: -120px;
     /* Use half of the width (120/2 = 60), to center the tooltip */
     background-color: black;
     color: #fff;
@@ -29,18 +26,18 @@
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
+.issue-type:hover .tooltiptext {
     visibility: visible;
 }
 
-.tooltip .tooltiptext::after {
+.issue-type .tooltiptext::after {
     content: " ";
     position: absolute;
-    top: 100%;
-    /* At the bottom of the tooltip */
+    bottom: 100%;
+    /* At the top of the tooltip */
     left: 50%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: black transparent transparent transparent;
+    border-color: transparent transparent black transparent;
 }
