--- a/site/css/tooltip.css
+++ b/site/css/tooltip.css
@@ -17,7 +17,7 @@
     color: #fff;
     text-align: center;
     font-size: 10pt;
-    padding: 5px 0;
+    padding: 5px;
     border-radius: 6px;
 
     /* Position the tooltip text - see examples below! */
